...

          NavigationLink {
            SessionHistoryView()
          } label: {
            Text("Session History")
          }
          .accessibilityIdentifier("session_history_link")
        }

        Section(header: Text("Sounds")) {
          Toggle(isOn: $settings.ringBellAtStart, label: { Text("Ring bell at start of session") })
        }

...
