...
      .padding()

      // Timer controls
      HStack {
        // Cancel button
        ImageButton(
          imageName: "xmark.circle.fill", buttonText: "Cancel",
          action: {
            timerViewModel.reset()
            presentationMode.wrappedValue.dismiss()
          }
        )
        .padding()

        // Complete button
        ImageButton(
          imageName: "checkmark.circle.fill", buttonText: "Complete",
          action: {
            presentationMode.wrappedValue.dismiss()
          }
        )
        .padding()
      }
...
